feat(identity): persist login session refresh token